--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
 
                 <!-- Introduction Text -->
                 <p id="first">Hey, I am <br />*******</p>
-                <h6>PhotoGrapher/ Editor / Cinematic Creator</h6>
+                <h6>PhotoGrapher / Editor / Cinematic Creator</h6>
             </header>
         </div>
 
         <!-- Right Panel: Profile Image -->
         <div class="image-container">
-            <img class="pic" src="main side pic.jpeg" alt="Profile" />
+            <img class="pic" src="assets/main_side_pic.jpeg" alt="Profile" />
         </div>
     </div>
 
@@ -49,30 +49,31 @@
             <h2 style="color:#005c63; font-size: 3.5rem;">About Me</h2>
             <p>
                 I’m a passionate Photographer and Editor with a keen eye for detail and a love for capturing life’s most
-                meaningful
-                moments. Whether it's a candid portrait, a cinematic wedding shoot, or a branded commercial project, I
-                focus on telling
+                meaningful moments.
+                Whether it's a candid portrait, a cinematic wedding shoot, or a branded commercial project, I focus on
+                telling
                 stories through powerful visuals.
                 <br><br>
                 Beyond photography, I specialize in creative editing, color grading, and retouching—bringing raw images
-                to life. With a strong
-                commitment to quality, I deliver content that looks stunning and connects emotionally.
+                to life.
+                With a strong commitment to quality, I deliver content that looks stunning and connects emotionally.
             </p>
         </div>
     </section>
 
     <!-- Social Media Links Bar -->
     <div class="social-bar">
-        <a href="https://www.facebook.com"><img src="icons8-facebook-24.png" loading="lazy" alt="facebook"></a>
-        <a href="https://www.instagram.com"><img src="icons8-instagram-24.png" loading="lazy" alt="instagram"></a>
-        <a href="https://www.x.com"><img src="icons8-x-50.png" loading="lazy" alt="Twitter"></a>
-        <a href="https://www.youtube.com"><img src="icons8-youtube-24.png" loading="lazy" alt="YouTube"></a>
+        <a href="https://www.facebook.com"><img src="assets/icons8-facebook-24.png" loading="lazy" alt="facebook"></a>
+        <a href="https://www.instagram.com"><img src="assets/icons8-instagram-24.png" loading="lazy"
+                alt="instagram"></a>
+        <a href="https://www.x.com"><img src="assets/icons8-x-50.png" loading="lazy" alt="Twitter"></a>
+        <a href="https://www.youtube.com"><img src="assets/icons8-youtube-24.png" loading="lazy" alt="YouTube"></a>
     </div>
 
     <!-- Showreel / Video Section -->
     <div id="reel">
         <h2 style="color:#005c63; font-size: 4rem;">ShowReel</h2>
-        <img class="bagimage" src="center look.jpeg" alt="Video Background">
+        <img class="bagimage" src="assets/center_look.jpeg" alt="Video Background">
     </div>
 
     <!-- Photos Gallery Section -->
@@ -81,10 +82,10 @@
 
         <!-- Image Grid -->
         <div class="Thorpics">
-            <img id="one" src="first pic.jpeg" loading="lazy" alt="First Pic">
-            <img id="two" src="second pic.jpg" loading="lazy" alt="Second Pic">
-            <img id="four" src="three pic.jpeg" loading="lazy" alt="Fourth Pic">
-            <img id="five" src="fourth pic .jpeg" loading="lazy" alt="Fifth Pic">
+            <img id="one" src="assets/first_pic.jpeg" loading="lazy" alt="First Pic">
+            <img id="two" src="assets/second_pic.jpg" loading="lazy" alt="Second Pic">
+            <img id="four" src="assets/three_pic.jpeg" loading="lazy" alt="Fourth Pic">
+            <img id="five" src="assets/fourth_pic .jpeg" loading="lazy" alt="Fifth Pic">
         </div>
     </div>
 
@@ -105,16 +106,16 @@
             </form>
 
             <!-- Additional Contact Info -->
-            <p>Email: orugantishashikumar44@gamil.com</p>
-            <p>Phone: +91-8328077279</p>
+            Email:<a href="mailto:orugantishashikumar44@gamil.com">orugantishashikumar44@gamil.com</a>
             <p>Location: Hyderabad, India</p>
 
             <!-- Footer Social Icons -->
             <div class="footer-bar">
-                <a href="https://www.facebook.com"><img src="icons8-facebook-24.png" loading="lazy" alt="facebook"></a>
-                <a href="https://www.instagram.com"><img src="icons8-instagram-24.png" loading="lazy"
+                <a href="https://www.facebook.com"><img src="assets/icons8-facebook-24.png" loading="lazy"
+                        alt="facebook"></a>
+                <a href="https://www.instagram.com"><img src="assets/icons8-instagram-24.png" loading="lazy"
                         alt="instagram"></a>
-                <a href="https://www.x.com"><img src="icons8-x-50.png" loading="lazy" alt="Twitter"></a>
+                <a href="https://www.x.com"><img src="assets/icons8-x-50.png" loading="lazy" alt="Twitter"></a>
             </div>
         </div>
     </footer>
