portfolio name change

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <!-- Link to external CSS file -->
     <link rel="stylesheet" href="index.css" />
-    <title>My Portfolio</title>
+    <title>My Portfolio shashi</title>
 </head>
 
 <body>
